--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "loto-app",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -8,8 +9,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
+    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
@@ -17,6 +18,7 @@
     "helmet": "^8.1.0",
     "joi": "^18.0.1",
     "jose": "^6.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "openid-client": "^6.8.1",
     "pg": "^8.16.3",
